fixed form spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -555,7 +555,7 @@
 			width: 100%;
 			justify-content: flex-start;
 			& input {
-				margin: 1.5rem 0;
+				margin: 0;
 				max-width: 100%;
 				padding: 0.75rem 1rem;
 				border: 1px solid $box-shadow;
@@ -606,7 +606,7 @@
 		}
 		& .form-body {
 			width: 100%;
-			margin: 0;
+			margin: 1.5rem 0;
 			& textarea {
 				padding: 1rem;
 				border: 1px solid $box-shadow;
@@ -631,7 +631,7 @@
 		& .submit {
 			padding: 0.8rem 2.5rem;
 			font-size: 1rem;
-			margin: 1.5rem;
+			margin: 0 1.5rem;
 			background-color: $primary-color;
 			opacity: 0.8;
 			border: 1px solid $box-shadow;
